# slayer

./: .gitignore  CHANGELOG.md  KALI_GUIDE.md  KALI_INSTALL.md  README.md  USAGE.md  install.sh  kali_quickstart.sh  pyproject.toml  requirements-basic.txt  requirements.txt  setup.sh  slayer  slayer.py  slayer_enterprise_enhanced.py  verify_kali.sh
config/: kali_optimized.json  production.json
slayer_enterprise/testing/: __init__.py  authorization.py  coordinator.py  metrics.py  patterns.py  throttle.py
