[project]
name = "slayer"
version = "4.0.0"
description = "Unified HTTP load testing and request framework"
requires-python = ">=3.8"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "requests>=2.31.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
enterprise = [
    "certifi>=2023.11.17",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.7",
    "pydantic>=2.5.0",
]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "aioresponses>=0.7.6",
    "black>=23.12.1",
    "flake8>=7.0.0",
    "mypy>=1.7.1",
    "isort>=5.13.2",
]

[project.scripts]
slayer = "slayer:cli"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
